from __future__ import annotations

import uuid
from datetime import datetime
from typing import Optional

from sqlalchemy import Text, Boolean, DateTime, func, Index, text, ForeignKey
from sqlalchemy.dialects.postgresql import UUID
from sqlalchemy.orm import Mapped, mapped_column, relationship

from .base import Base


class Comment(Base):
    __tablename__ = "comments"
    __table_args__ = (Index("idx_comments_post", "post_id"), Index("idx_comments_video", "video_id"), {"schema": "linap"})

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, server_default=text("gen_random_uuid()"))
    user_id: Mapped[Optional[uuid.UUID]] = mapped_column(UUID(as_uuid=True), ForeignKey("linap.users.id"))
    post_id: Mapped[Optional[uuid.UUID]] = mapped_column(UUID(as_uuid=True), ForeignKey("linap.posts.id"))
    video_id: Mapped[Optional[uuid.UUID]] = mapped_column(UUID(as_uuid=True), ForeignKey("linap.videos.id"))
    parent_id: Mapped[Optional[uuid.UUID]] = mapped_column(UUID(as_uuid=True), ForeignKey("linap.comments.id"))
    content: Mapped[str] = mapped_column(Text, nullable=False)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), nullable=False, server_default=func.now())
    updated_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), nullable=False, server_default=func.now())
    is_deleted: Mapped[bool] = mapped_column(Boolean, nullable=False, server_default=text('false'))

    # Relationships
    author: Mapped[Optional["User"]] = relationship("User", foreign_keys=[user_id])
    @property
    def author_id(self) -> Optional[uuid.UUID]:
        """Alias for user_id for compatibility"""
        return self.user_id